--- a/.github/workflows/update-feed.yml
+++ b/.github/workflows/update-feed.yml
@@ -6,17 +6,19 @@ on:
     branches:
       - main
   schedule:
-    # Adjust refresh schedule here. By default, it runs once per day.
-    # Syntax reference: https://docs.github.com/en/actions/reference/events-that-trigger-workflows#schedule
-    # Recommended tool: https://crontab.guru/
     - cron: "12 5 * * *"
+
+permissions:
+  contents: write
+  pages: write
+  id-token: write
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3  # 升级到 v3，避免权限问题
       - name: Download ArxivFeed
         env:
           GITHUB_PAT: ${{ github.token }}
